CHANGES IN CONFIG AND MAIN SCREEN

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
-import { Header } from '@features/Header/index'
+import { HeaderMobile } from '@features/HeaderMobile/index'
+import MainMobile from '@widgets/Screens/MainMobile/index'
 
 import Layout from '../layouts/Layout.astro'
 
@@ -10,7 +11,8 @@ import styles from './styles/Home/styles.module.scss'
 	title=""
 	description=""
 >
-	<main class={styles.main} id="main">
-		<Header client:load />
+	<main class={styles.main__mobile} id="main-mobile">
+		<HeaderMobile client:load />
+		<MainMobile client:load />
 	</main>
 </Layout>
