--- a/src/shared/ui/lib/styles/_variables.scss
+++ b/src/shared/ui/lib/styles/_variables.scss
@@ -1,6 +1,6 @@
 $breakpoints: (
-  "xs": 480px,
-  "sm": 768px,
-  "md": 992px,
-  "lg": 1200px,
+  phone: 576px,
+  tablet-portrait: 768px, 
+  tablet-landscape: 1024px, 
+  desktop: 1200px
 );
