--- a/src/shared/ui/InvertedTextMobile/styles.module.scss
+++ b/src/shared/ui/InvertedTextMobile/styles.module.scss
@@ -2,6 +2,8 @@
     display: block;
     transform: rotate(-90deg);
     @apply font-Helvetica;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .mobile {
