--- a/src/widgets/Screens/Advantages/index.astro
+++ b/src/widgets/Screens/Advantages/index.astro
@@ -1,16 +1,19 @@
 ---
-import styles from ''
+import styles from './styles.module.scss'
 import {AdvantageBlock} from '@entities/AdvantageBlock/index'
 import 'animate.css'
 
 import muka from '@assets/Advantages/muka.svg'
 import buckwheat from '@assets/Advantages/buckwheat.svg'
+import butter from '@assets/Advantages/butter.svg'
+import muka_line from '@assets/Advantages/muka_line.svg'
 ---
 
 <section class="mt-8">
     <h1>Наши преимущества</h1>
-    <AdvantageBlock picture={muka} heading='В нашей пекарне' paragraph='Kаждое изделие создается вручную настоящими мастерами своего дела. Это не только гарантирует высокое качество и неповторимый вкус продукции, но и придает ей особенный характер и уникальность.' paragraphType='mobile' advantageBlockType='muka-mobile' margin='mt-5' paragraphMargin='mt-3' width='86%'/>
-    <div class={styles} >
+    <AdvantageBlock picture={muka} line={muka_line} heading='В нашей пекарне' paragraph='Kаждое изделие создается вручную настоящими мастерами своего дела. Это не только гарантирует высокое качество и неповторимый вкус продукции, но и придает ей особенный характер и уникальность.' paragraphType='mobile' advantageBlockType='muka-mobile' margin='mt-5' paragraphMargin='mt-3' width='86%'/>
+    <div class={styles.buckwheat} >
         <img src={buckwheat.src} alt="buckwheat" class=" top-0 right-0 absolute animate__animated animate__fadeInRight">
     </div>
+    <AdvantageBlock picture={butter} heading='Мы строго придерживаемся' line={muka_line} paragraph='Принципа использования только натуральных ингредиентов. Мы уверены, что качественная продукция начинается с качественных компонентов, поэтому мы тщательно выбираем только лучшие сырьевые материалы для нашей выпечки.' paragraphType='mobile' advantageBlockType='butter-mobile' margin='mt-5' paragraphMargin='mt-3' width='86%' margin="mt-20"/>
 </section>
